# gx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  deny.toml  dist-workspace.toml  release-plz.toml  rustfmt.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/opsx/: apply.md  archive.md  explore.md  propose.md  review.md
.claude/skills/: gx-architecture.md  gx-code-patterns.md  gx-project-overview.md
.claude/skills/gx-release-process/: SKILL.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/openspec-review-proposal/: SKILL.md
.config/: mise.ci.toml  mise.test.toml  mise.toml
.config/mise/tasks/: build  check  clippy  demo  deny  e2e  format  init  install  integ  semver  setup  test  test-all  tidy  upgrade
.github/: gx.toml
.github/workflows/: build.yml  release-plz.yml  release.yml
crates/gx/: CHANGELOG.md  Cargo.toml
crates/gx-lib/: Cargo.toml
crates/gx-lib/src/: config.rs  lib.rs
crates/gx-lib/src/commands/: app.rs  mod.rs  tidy.rs  upgrade.rs
crates/gx-lib/src/commands/lint/: mod.rs  stale_comment.rs  unpinned.rs
crates/gx-lib/src/domain/: action.rs  lock.rs  manifest.rs  mod.rs  resolution.rs
crates/gx-lib/src/infrastructure/: github.rs  lock.rs  manifest.rs  mod.rs
crates/gx-lib/tests/: lint_test.rs  repo_test.rs  tidy_test.rs  upgrade_test.rs
crates/gx/src/: main.rs
docs/: CONTRIBUTING.md  architecture.md  demo.Dockerfile  demo.tape  domain-architecture.excalidraw.json  gx_doc.toml  init.md  lint-rules.md  lock-architecture.excalidraw.json  lock.md  manifest-architecture.excalidraw.json  manifest.md  pin.md  plan.md  tidy-command.excalidraw.json  tidy.md  upgrade.md
docs/development/: architecture.md  domain-architecture.excalidraw.json  init.md  lock-architecture.excalidraw.json  manifest-architecture.excalidraw.json  overview-architecture.excalidraw  tidy-command.excalidraw.json  tidy.md  upgrade.md
docs/superpowers/specs/: 2026-03-16-openspec-philosophy-design.md
openspec/: config.yaml
openspec/changes/add-prek-lockfile-hooks/: design.md  tasks.md
openspec/changes/add-run-shellcheck-rule/: design.md  proposal.md  tasks.md
openspec/changes/add-workflow-security-rules/: design.md  proposal.md  tasks.md
openspec/changes/add-workflow-validity-rules/: proposal.md  tasks.md
openspec/changes/catch-lockfile-drift-ci/: design.md  proposal.md  tasks.md
openspec/changes/consolidate-task-execution/: design.md  proposal.md  tasks.md
openspec/changes/fix-lock-metadata-bugs/: proposal.md
openspec/changes/local-only-mise-tools/: tasks.md
openspec/changes/output-ux-redesign/: tasks.md
openspec/changes/promote-test-to-local-gate/: design.md  proposal.md  tasks.md
openspec/changes/remove-x86-apple-darwin-target/: proposal.md  tasks.md
openspec/changes/simplify-mise-config/: README.md  tasks.md
openspec/changes/yaml-native-comments-and-line-locations/: proposal.md  tasks.md
openspec/specs/action-resolution/: spec.md
openspec/specs/architecture-guardrails/: spec.md
openspec/specs/ci-mise-config/: spec.md
openspec/specs/clippy-restriction-config/: spec.md
openspec/specs/code-quality/: spec.md
openspec/specs/command-output/: spec.md
openspec/specs/domain-composition/: spec.md
openspec/specs/domain-sync-events/: spec.md
openspec/specs/error-handling/: spec.md
openspec/specs/file-format/: spec.md
openspec/specs/homebrew-publish/: spec.md
openspec/specs/homebrew-release/: spec.md
openspec/specs/lint/: spec.md
openspec/specs/lint-command/: spec.md
openspec/specs/lint-rules/: spec.md
openspec/specs/lock-format/: spec.md
openspec/specs/lock-reconciliation/: spec.md
openspec/specs/lockfile-integrity/: spec.md
openspec/specs/manifest-and-lock/: spec.md
openspec/specs/manifest-authority/: spec.md
openspec/specs/module-qualified-types/: spec.md
openspec/specs/output/: spec.md
openspec/specs/output-rendering/: spec.md
openspec/specs/pr-based-homebrew-publish/: spec.md
openspec/specs/recoverable-errors/: spec.md
openspec/specs/resolution/: spec.md
openspec/specs/resolution-metadata/: spec.md
openspec/specs/sha-description/: spec.md
openspec/specs/sha-first-resolution/: spec.md
openspec/specs/sha-index/: spec.md
openspec/specs/spinner-progress/: spec.md
openspec/specs/task-execution-consistency/: spec.md
openspec/specs/test-structure/: spec.md
openspec/specs/upgrade-scope/: spec.md
src/: command.rs  commands.rs  config.rs  error.rs  git.rs  github.rs  lib.rs  lock.rs  main.rs  manifest.rs  regex.rs  repo.rs  version.rs  workflow.rs
src/commands/: app.rs  mod.rs  pin.rs  set.rs  tidy.rs  upgrade.rs
src/domain/: action.rs  command.rs  diff.rs  error.rs  event.rs  lock.rs  manifest.rs  mod.rs  plan.rs  resolution.rs  resolution_testutil.rs  version.rs  workflow.rs  workflow_action.rs  workflow_actions.rs  workflow_parsed.rs
src/infra/: github.rs  lock.rs  manifest.rs  mod.rs  repo.rs  workflow.rs  workflow_update.rs
src/infrastructure/: github.rs  lock.rs  manifest.rs  mod.rs  repo.rs  workflow.rs
src/init/: command.rs  mod.rs  report.rs
src/lint/: command.rs  dangerous_trigger.rs  excessive_permissions.rs  missing_concurrency.rs  missing_permissions.rs  mod.rs  pr_head_checkout.rs  report.rs  rule.rs  sha_mismatch.rs  stale_comment.rs  unpinned.rs  unprotected_secrets.rs  unsynced_manifest.rs
src/output/: lines.rs  log_file.rs  mod.rs  printer.rs  render.rs  report.rs
src/tidy/: command.rs  command_tests.rs  lock_sync.rs  manifest_sync.rs  mod.rs  patches.rs  report.rs  tests.rs
src/upgrade/: cli.rs  command.rs  mod.rs  plan.rs  report.rs  types.rs
tests/: code_health.rs  e2e_github.rs  e2e_pipeline.rs  e2e_test.rs  integ_lint.rs  integ_pipeline.rs  integ_repo.rs  integ_tidy.rs  integ_upgrade.rs  lint_test.rs  pin_test.rs  repo_test.rs  set_test.rs  tidy_test.rs  upgrade_test.rs
tests/common/: mod.rs  registries.rs  setup.rs
(+342 files in other folders)
