[package]
name = "gx"
version = "0.5.9"
description = "CLI to manage Github Actions dependencies"
authors = ["Eligio Mariño"]
documentation = "https://docs.rs/gx"
edition = "2024"
license = "MIT"
homepage = "https://github.com/gmeligio/gx"
repository = "https://github.com/gmeligio/gx"
resolver = "2"
rust-version = "1.93"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
gix-discover = "0.46.0"
glob = "0.3"
indicatif = "0.18"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.21"
thiserror = "2"
toml = "0.9"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
