[package]
name = "gx"
version = "0.7.0"
description = "CLI to manage Github Actions dependencies"
authors = ["Eligio Mariño"]
documentation = "https://docs.rs/gx"
edition = "2024"
license = "MIT"
homepage = "https://github.com/gmeligio/gx"
repository = "https://github.com/gmeligio/gx"
resolver = "2"
rust-version = "1.93"
include = ["src/", "LICENSE.md", "README.md", "!openspec/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
gix-discover = "0.46.0"
glob = "0.3"
indicatif = "0.18"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.21"
thiserror = "2"
time = "0.3"
toml = "0.9"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"

[lints.rust]
# Escalates all warnings to errors. This catches clippy::all (correctness,
# suspicious, style, complexity, perf) which default to warn.
warnings = "deny"

[lints.clippy]
# Group: pedantic (default: allow). Stricter, opinionated lints not in
# clippy::all. Must be explicitly enabled.
pedantic = "deny"
# From the restriction group (default: allow). Restriction
# lints are not enabled by any group — each must be opted into individually.
# They ban specific language patterns rather than catching bugs.
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
doc_paragraphs_missing_punctuation = "deny"
expect_used = "deny"
field_scoped_visibility_modifiers = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
indexing_slicing = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
missing_docs_in_private_items = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
panic = "deny"
print_stdout = "deny"
pub_use = "deny"
redundant_test_prefix = "deny"
ref_patterns = "deny"
shadow_reuse = "deny"
shadow_unrelated = "deny"
single_char_lifetime_names = "deny"
str_to_string = "deny"
string_slice = "deny"
unneeded_field_pattern = "deny"
unnecessary_safety_comment = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
# From the nursery group (default: allow). Nursery lints are experimental but
# this one is stable enough to rely on.
redundant_clone = "deny"

[profile.dist]
inherits = "release"
lto = "thin"
