[package]
name = "gx-lib"
version = "0.5.4"
edition = "2024"
publish = false

[dependencies]
gix-discover = "0.46.0"
glob = "0.3"
log = "0.4"
regex = "1"
reqwest = { version = "0.13", features = ["blocking", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.21"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3"

[package.metadata.dist]
dist = false

[lints]
workspace = true
