[package]
name = "gx-lib"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# third-party
gix-discover.workspace = true
glob.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.dist]
dist = false

[lints]
workspace = true
