[package]
name = "gx"
version = "0.5.4"
description = "CLI to manage Github Actions dependencies"
license = "MIT"
documentation = "https://docs.rs/gx"
edition = "2024"
homepage = "https://github.com/gmeligio/gx"
repository = "https://github.com/gmeligio/gx"

[dependencies]
gx-lib = { path = "../gx-lib" }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2"

[lints]
workspace = true
