[package]
name = "gx"
version = "0.5.4"
description = "CLI to manage Github Actions dependencies"
license = "MIT"
documentation = "https://docs.rs/gx"
edition = "2024"
homepage = "https://github.com/gmeligio/gx"
repository = "https://github.com/gmeligio/gx"

[dependencies]
# local
gx-lib.workspace = true

# third-party
clap.workspace = true
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true

[lints]
workspace = true
